# teensyLCStandAlone

./: CMakeLists.txt  Makefile_save  armgcc.cmake  assert.c  assert.h  core_pins.h  main.cpp  mk20dx128.c  pins_teensy.c
